--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -62,7 +62,9 @@ library
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.8 && <4.9,
                        QuickCheck >= 2.8.1,
-                       derive >= 2.5.22
+                       derive >= 2.5.22,
+                       lens >= 4.11,
+                       containers >= 0.5.6.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
