--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -63,8 +63,8 @@ library
   build-depends:       base >=4.8 && <4.9,
                        QuickCheck >= 2.8.1,
                        derive >= 2.5.22,
-                       lens >= 4.11,
-                       containers >= 0.5.6.2
+                       containers >= 0.5.6.2,
+                       pretty >= 1.1.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
