--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -51,7 +51,7 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules:     Database.SqlServer.Types.Table
+  exposed-modules:     Database.SqlServer.Types.Database
   
   -- Modules included in this library but not exported.
   -- other-modules:       
