--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -52,6 +52,8 @@ cabal-version:       >=1.10
 library
   -- Modules exported by the library.
   exposed-modules:     Database.SqlServer.Types.Database
+
+  ghc-options:         -Wall
   
   -- Modules included in this library but not exported.
   -- other-modules:       
