--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -74,3 +74,13 @@ library
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+Test-Suite tests
+  ghc-options:          -Wall
+  type:                 exitcode-stdio-1.0
+  hs-source-dirs:       test
+  main-is:              Main.hs
+  default-language:     Haskell2010
+  build-depends:        base >=4.8 && <4.9,
+                        sql-server-gen,
+                        tasty >= 0.10.1.2
+                                    
