--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -51,7 +51,8 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules:     Database.SqlServer.Types.Database
+  exposed-modules:     Database.SqlServer.Types.Database,
+                       Database.SqlServer.Types.Sequence               
 
   ghc-options:         -Wall
   
@@ -82,5 +83,5 @@ Test-Suite tests
   default-language:     Haskell2010
   build-depends:        base >=4.8 && <4.9,
                         sql-server-gen,
-                        tasty >= 0.10.1.2
+                        hspec >= 2.1.7
                                     
