--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -52,7 +52,8 @@ cabal-version:       >=1.10
 library
   -- Modules exported by the library.
   exposed-modules:     Database.SqlServer.Types.Database,
-                       Database.SqlServer.Types.Sequence               
+                       Database.SqlServer.Types.Sequence,
+                       Database.SqlServer.Types.Identifiers           
 
   ghc-options:         -Wall
   
@@ -83,5 +84,6 @@ Test-Suite tests
   default-language:     Haskell2010
   build-depends:        base >=4.8 && <4.9,
                         sql-server-gen,
-                        hspec >= 2.1.7
+                        hspec >= 2.1.7,
+                        containers >= 0.5.6.2
                                     
