--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -87,3 +87,11 @@ Test-Suite tests
                         hspec >= 2.1.7,
                         containers >= 0.5.6.2
                                     
+executable webserver
+  ghc-options:          -Wall
+  main-is:              Main.hs
+  hs-source-dirs:       web
+  default-language:     Haskell2010
+  build-depends:        base >=4.8 && <4.9,
+                        sql-server-gen,
+                        scotty >= 0.10.1
