--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -53,7 +53,14 @@ library
   -- Modules exported by the library.
   exposed-modules:     Database.SqlServer.Types.Database,
                        Database.SqlServer.Types.Sequence,
-                       Database.SqlServer.Types.Identifiers           
+                       Database.SqlServer.Types.Identifiers,
+                       Database.SqlServer.Types.Procedure,
+                       Database.SqlServer.Types.Properties,
+                       Database.SqlServer.Types.Queue,
+                       Database.SqlServer.Types.DataTypes,
+                       Database.SqlServer.Types.Reserved,
+                       Database.SqlServer.Types.Table,
+                       Database.SqlServer.Types.Collations
 
   ghc-options:         -Wall
   
@@ -94,4 +101,10 @@ executable webserver
   default-language:     Haskell2010
   build-depends:        base >=4.8 && <4.9,
                         sql-server-gen,
-                        scotty >= 0.10.1
+                        scotty >= 0.10.1,
+                        aeson >= 0.9.0.1,
+                        hashable >= 1.2.3.2,
+                        QuickCheck >= 2.8.1,
+                        pretty >= 1.1.2,
+                        transformers >= 0.4.2.0,
+                        text >= 1.2.1.1
