--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -106,3 +106,16 @@ executable webserver
                         QuickCheck >= 2.8.1,
                         pretty >= 1.1.2,
                         transformers >= 0.4.2.0
+
+executable cli
+  ghc-options:          -Wall
+  main-is:              Main.hs
+  hs-source-dirs:       cli
+  default-language:     Haskell2010
+  build-depends:        base >=4.8 && <4.9,
+                        sql-server-gen,
+                        scotty >= 0.10.1,
+                        aeson >= 0.9.0.1,
+                        QuickCheck >= 2.8.1,
+                        pretty >= 1.1.2,
+                        transformers >= 0.4.2.0
