--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -75,7 +75,8 @@ library
                        QuickCheck >= 2.8.1,
                        derive >= 2.5.22,
                        containers >= 0.5.6.2,
-                       pretty >= 1.1.2
+                       pretty >= 1.1.2,
+                       uuid >= 1.3.10          
   
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -103,4 +104,5 @@ executable cli
                         sql-server-gen,
                         transformers >= 0.4.2.0,
                         cmdargs >= 0.10.13
+
                         
