--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -74,7 +74,8 @@ library
                        derive >= 2.5.22,
                        containers >= 0.5.6.2,
                        pretty >= 1.1.2,
-                       uuid >= 1.3.10          
+                       uuid >= 1.3.10,
+                       time >= 1.5.0.1
   
   -- Directories containing source files.
   hs-source-dirs:      src
