--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -61,7 +61,8 @@ library
                        Database.SqlServer.Types.Collations,
                        Database.SqlServer.Types.Certificate,
                        Database.SqlServer.Types.User,
-                       Database.SqlServer.Types.FullTextCatalog
+                       Database.SqlServer.Types.FullTextCatalog,
+                       Database.SqlServer.Types.FullTextStopList,
                        Database.SqlServer.Types.Login
 
   ghc-options:         -Wall
