--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -80,7 +80,8 @@ library
                        containers >= 0.5.6.2,
                        pretty >= 1.1.2,
                        uuid >= 1.3.10,
-                       time >= 1.5.0.1
+                       time >= 1.5.0.1,
+                       iso8601-time >= 0.1.3
   
   -- Directories containing source files.
   hs-source-dirs:      src
