--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -58,7 +58,7 @@ library
                        Database.SqlServer.Definition.Queue,
                        Database.SqlServer.Definition.DataType,
                        Database.SqlServer.Definition.Table,
-                       Database.SqlServer.Definition.Collations,
+                       Database.SqlServer.Definition.Collation,
                        Database.SqlServer.Definition.Certificate,
                        Database.SqlServer.Definition.User,
                        Database.SqlServer.Definition.FullTextCatalog,
