--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -68,10 +68,12 @@ library
                        Database.SqlServer.Definition.Function,
                        Database.SqlServer.Definition.Credential,
                        Database.SqlServer.Definition.Contract,
-                       Database.SqlServer.Definition.BrokerPriority
+                       Database.SqlServer.Definition.BrokerPriority,
+                       Database.SqlServer.Definition.Service,
+                       Database.SqlServer.Definition.Entity
 
 
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2 -fwarn-tabs -Werror
   
   -- Modules included in this library but not exported.
   -- other-modules:       
@@ -107,7 +109,7 @@ Test-Suite tests
                         containers >= 0.5.6.2
                                     
 executable cli
-  ghc-options:          -Wall
+  ghc-options:          -Wall -O2 -fwarn-tabs -Werror
   main-is:              Main.hs
   hs-source-dirs:       cli
   default-language:     Haskell2010
