Get to work on partition functions

--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -70,6 +70,7 @@ library
                        Database.SqlServer.Definition.Contract,
                        Database.SqlServer.Definition.BrokerPriority,
                        Database.SqlServer.Definition.Service,
+                       Database.SqlServer.Definition.PartitionFunction,
                        Database.SqlServer.Definition.Entity
 
 
