move to a different namespace

--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -73,7 +73,10 @@ library
                        Database.SqlServer.Definition.Service,
                        Database.SqlServer.Definition.PartitionFunction,
                        Database.SqlServer.Definition.Entity,
-                       Database.SqlServer.Definition.Value
+                       Database.SqlServer.Definition.Value,
+                       Database.SqlServer.Alter.Alter,
+                       Database.SqlServer.Alter.Table
+
 
   ghc-options:         -Wall -O2 -fwarn-tabs 
   
