--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -95,7 +95,8 @@ library
                        uuid >= 1.3.10,
                        time >= 1.5.0.1,
                        iso8601-time >= 0.1.3,
-                       mtl >= 2.2.1
+                       mtl >= 2.2.1,
+                       random >= 1.1
   
   -- Directories containing source files.
   hs-source-dirs:      src
