--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -96,7 +96,8 @@ library
                        time >= 1.5.0.1,
                        iso8601-time >= 0.1.3,
                        mtl >= 2.2.1,
-                       random >= 1.1
+                       random >= 1.1,
+                       lens >= 4.9.1
   
   -- Directories containing source files.
   hs-source-dirs:      src
