--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -74,6 +74,7 @@ library
                        Database.SqlServer.Create.Service,
                        Database.SqlServer.Create.PartitionFunction,
                        Database.SqlServer.Create.Entity,
+                       Database.SqlServer.Create.Trigger,
                        Database.SqlServer.Create.Value,
                        Database.SqlServer.Alter.Alter,
                        Database.SqlServer.Alter.Table
