Generator should be the first exposed module to be in scope in the REPL

--- a/sql-server-gen.cabal
+++ b/sql-server-gen.cabal
@@ -51,7 +51,8 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules:     Database.SqlServer.Create.Database,
+  exposed-modules:     Database.SqlServer.Generator
+                       Database.SqlServer.Create.Database,
                        Database.SqlServer.Create.Sequence,
                        Database.SqlServer.Create.Identifier,
                        Database.SqlServer.Create.Procedure,
@@ -77,9 +78,7 @@ library
                        Database.SqlServer.Create.Value,
                        Database.SqlServer.Create.SecurityPolicy,
                        Database.SqlServer.Alter.Alter,
-                       Database.SqlServer.Alter.Table,
-                       Database.SqlServer.Generator
-
+                       Database.SqlServer.Alter.Table
 
   ghc-options:         -Wall -O2 -fwarn-tabs 
   
